# python-backend-training

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/pull_request_template/: phase_completion.md
docs/: pytest-guide.md  troubleshooting.md
docs/phase-1/: README.md
docs/phase-2/: README.md
docs/phase-3/: README.md
docs/phase-4/: README.md
docs/phase-5/: README.md
src/: string_formatter.py
src/phase1/: log_analyzer.py  practice_file_read.py  practice_string_parse.py
src/phase3/: calculator.py  log_filters.py  log_statistics.py  report_generator.py
src/phase4/: main.py
src/phase5/: main.py
src/phase5/api/: auth.py  logs.py  reports.py  statistics.py
src/phase5/auth/: jwt_auth.py
src/phase5/config/: settings.py
src/phase5/database/: database.py
tests/: conftest.py  test_tdd_demo.py
tests/phase2/: test_assertions.py  test_basic.py  test_log_analyzer.py  test_log_parser.py
tests/phase3/: test_advanced_filters.py  test_log_statistics.py  test_report_generator.py  test_response_time_stats.py  test_tdd_practice.py
tests/phase4/: test_api_basic.py  test_ddd_domain_services.py  test_ddd_entities.py  test_ddd_value_objects.py  test_file_upload_api.py  test_log_analysis_api.py  test_statistics_api.py
tests/phase5/: test_auth.py  test_database.py
tests/phase5/api/: test_auth_controller.py
tests/phase5/application/: test_use_cases.py
tests/phase5/domain/: test_user_entity.py  test_value_objects.py
tests/phase5/infrastructure/: test_repositories.py
(+26 files in other folders)
